upgrade v1.3.1